# api/docs/swagger.json
@@ -805,6 +805,59 @@
                 }
             }
         },
+        "/end_sell/{id}": {
+            "put": {
+                "description": "end sell",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "sell"
+                ],
+                "summary": "end sell",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "sale_id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "sale request",
+                        "name": "SaleRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SaleRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/product": {
             "get": {
                 "description": "Get products list",
@@ -2739,7 +2792,7 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "string"
+                    "type": "number"
                 },
                 "product_id": {
                     "type": "string"
@@ -2847,7 +2900,7 @@
             "type": "object",
             "properties": {
                 "price": {
-                    "type": "string"
+                    "type": "number"
                 },
                 "product_id": {
                     "type": "string"
@@ -3121,6 +3174,17 @@
                 }
             }
         },
+        "models.SaleRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "models.SalesResponse": {
             "type": "object",
             "properties": {
@@ -3381,7 +3445,7 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "string"
+                    "type": "number"
                 },
                 "product_id": {
                     "type": "string"
